[gd_scene format=3 uid="uid://cvnusflbvyips"]

[ext_resource type="Script" uid="uid://rrwpcep1a5em" path="res://scripts/player_movement.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://chpxoshrqmjlc" path="res://scenes/player_projectile.tscn" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://dqw58kga8rd6j" path="res://scripts/HUD.gd" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://dchce5t4vh75l" path="res://textures/UI/Untitled_Artwork.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://da0g8osn58slu" path="res://textures/UI/IMG_0084.png" id="5_tuyoq"]
[ext_resource type="Texture2D" uid="uid://dn8faon50eb3a" path="res://textures/UI/IMG_0087.png" id="6_fjrip"]
[ext_resource type="Texture2D" uid="uid://xqjyktdradco" path="res://textures/UI/IMG_0086.png" id="7_smehm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkhd4"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lrhn5"]

[node name="player" type="CharacterBody3D" unique_id=1220649139 groups=["player"]]
script = ExtResource("1_g2els")
projectile_scene = ExtResource("2_qhqgy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1008640707]
shape = SubResource("CapsuleShape3D_rkhd4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=1111516751]
mesh = SubResource("CapsuleMesh_lrhn5")

[node name="Camera3D" type="Camera3D" parent="." unique_id=1798798940]
transform = Transform3D(1, 0, 0, 0, 0.49999997, 0.86602545, 0, -0.86602545, 0.49999997, 0, 15, 10)

[node name="HUD" type="CanvasLayer" parent="." unique_id=55515872]
script = ExtResource("3_qhqgy")

[node name="HUDContainer" type="Control" parent="HUD" unique_id=980163338]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmmoLabel" type="Label" parent="HUD/HUDContainer" unique_id=782604712]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -186.0
offset_right = -10.0
offset_bottom = -142.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="HUD/HUDContainer" unique_id=1511404245]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -133.0
offset_right = -30.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
fill_mode = 3
texture_under = ExtResource("4_fjrip")
texture_progress = ExtResource("5_tuyoq")

[node name="CooldownBar" type="TextureProgressBar" parent="HUD/HUDContainer" unique_id=1431597799]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -143.0
offset_right = -3.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
fill_mode = 3
texture_under = ExtResource("6_fjrip")
texture_progress = ExtResource("7_smehm")
